--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway"rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
     <link rel="stylesheet" media="all" href="/res/screen.css?v=20220110152742" type="text/css">
-    <link rel="alternate" type="application/atom+xml" title="Julia Fukuyama" href="/atom.xml">
+    <link rel="alternate" type="application/atom+xml" title="David Rach" href="/atom.xml">
     <link rel="shortcut icon" href="/tree-round.png?v=20220110152742">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110259368-1"></script>
@@ -35,11 +35,11 @@
     </header>
 
     <div class=right>
-  <img src=photo_small.png>
+  <img src=ItsFine.png>
 </div>
 
 <div class=left>
-  <h1 id="julia-fukuyama">Julia Fukuyama</h1>
+  <h1 id="DavidRach">David Rach</h1>
 
 <p>I am a 5th year PhD Candidate in Molecular Microbiology and Immunology at the University of Maryland, School of Medicine.</p>
 
