--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 
 <p>I am a 5th year PhD Candidate in Molecular Microbiology and Immunology at the University of Maryland, School of Medicine.</p>
 
-<p>I am advised by <a href="https://www.medschool.umaryland.edu/profiles/Cairo-Cristiana/">Cristiana Cairo</a> and <a href="https://www.medschool.umaryland.edu/profiles/Lyke-Kirsten/"Kirsten Lyke</a>
-My undergraduate degree was from the University of Wyoming, where I received a B.S. in Molecular Biology and Microbiology and researched in lab of <a href="http://www.uwyo.edu/molecbio/faculty-and-staff/jason-gigley/index.html">Jason Gigley</a> </p>
+<p>I am advised by <a href="https://www.medschool.umaryland.edu/profiles/Cairo-Cristiana/">Cristiana Cairo</a> and <a href="https://www.medschool.umaryland.edu/profiles/Lyke-Kirsten/"Kirsten Lyke</a> </p>
+
+<p>My undergraduate degree was from the University of Wyoming, where I received a B.S. in Molecular Biology and Microbiology and researched in lab of <a href="http://www.uwyo.edu/molecbio/faculty-and-staff/jason-gigley/index.html">Jason Gigley</a> </p>
 
 <p>I enjoy Tacos.</p>
 
