--- a/Research/index.html
+++ b/Research/index.html
@@ -2,14 +2,14 @@
 <html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
-    <title>Julia Fukuyama</title>
+    <title>David Rach</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Oxygen:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway"rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
     <link rel="stylesheet" media="all" href="/res/screen.css?v=20220312142427" type="text/css">
-    <link rel="alternate" type="application/atom+xml" title="Julia Fukuyama" href="/atom.xml">
+    <link rel="alternate" type="application/atom+xml" title="David Rach" href="/atom.xml">
     <link rel="shortcut icon" href="/tree-round.png?v=20220312142427">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110259368-1"></script>
@@ -26,10 +26,10 @@
       <h1><a href="/"></a></h1>
       <ul class="navigation">
 	<li><a href="/" title="Home">Home</a></li>
-	<li><a href="/research/" title="Research">Research</a></li>
-	<li><a href="/software/" title="Software">Software</a></li>
-	<li><a href="/teaching/" title="Teaching">Teaching</a></li>
-	<li><a href="/cv.pdf" title="CV">CV</a></li>
+	<li><a href="/Research/" title="Research">Research</a></li>
+	<li><a href="/Software/" title="Software">Software</a></li>
+	<li><a href="/Teaching/" title="Teaching">Teaching</a></li>
+	<li><a href="/CV.pdf" title="CV">CV</a></li>
 	<li><a href="https://github.com/DavidRach"><img src="/github-mark-22px.png"></a></li>
       </ul>
     </header>
