--- a/Research/index.html
+++ b/Research/index.html
@@ -26,10 +26,10 @@
       <h1><a href="/"></a></h1>
       <ul class="navigation">
 	<li><a href="/" title="Home">Home</a></li>
-	<li><a href="/Research/" title="Research">Research</a></li>
-	<li><a href="/Software/" title="Software">Software</a></li>
-	<li><a href="/Teaching/" title="Teaching">Teaching</a></li>
-	<li><a href="/CV.pdf" title="CV">CV</a></li>
+	<li><a href="/research/" title="Research">Research</a></li>
+	<li><a href="/software/" title="Software">Software</a></li>
+	<li><a href="/teaching/" title="Teaching">Teaching</a></li>
+	<li><a href="/cv.pdf" title="CV">CV</a></li>
 	<li><a href="https://github.com/DavidRach"><img src="/github-mark-22px.png"></a></li>
       </ul>
     </header>
