--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <ul class="navigation">
 	<li><a href="/" title="Home">Home</a></li>
 	<li><a href="/research/" title="Research">Research</a></li>
-	<li><a href="/software/" title="Software">Software</a></li>
-	<li><a href="/teaching/" title="Teaching">Teaching</a></li>
-	<li><a href="/cv.pdf" title="CV">CV</a></li>
+	<li><a href="/research/" title="Research">Software</a></li>
+	<li><a href="/research/" title="Teaching">Research</a></li>
+	<li><a href="/research" title="CV">CV</a></li>
 	<li><a href="https://github.com/DavidRach"><img src="/github-mark-22px.png"></a></li>
       </ul>
     </header>
