--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <ul class="navigation">
 	<li><a href="/" title="Home">Home</a></li>
 	<li><a href="/research/" title="Research">Research</a></li>
-	<li><a href="/research/" title="Research">Software</a></li>
-	<li><a href="/research/" title="Teaching">Research</a></li>
+	<li><a href="/research/" title="Research">WorkInProgress</a></li>
+	<li><a href="/research/" title="Research">WorkInProgress</a></li>
 	<li><a href="/research" title="CV">CV</a></li>
 	<li><a href="https://github.com/DavidRach"><img src="/github-mark-22px.png"></a></li>
       </ul>
