--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 
 <p>I am a 5th year PhD Candidate in Molecular Microbiology and Immunology at the University of Maryland, School of Medicine. My Thesis Advisors are Drs. <a href="https://www.medschool.umaryland.edu/profiles/Cairo-Cristiana/">Cristiana Cairo</a> and <a href="https://www.medschool.umaryland.edu/profiles/Lyke-Kirsten/"> Kirsten Lyke</a> </p>
 
-<p>I received my A.S in Natural Resources Biology at Northwest College, where I undergraduate research with <a href="https://nwc.edu/directory/combined/profile.html?id=b9d36ed8-608c-42da-a2a8-85138fba0ae9">Eric Atkinson</a>
-	I received a B.S. in Molecular Biology and Microbiology and researched in lab of <a href="http://www.uwyo.edu/molecbio/faculty-and-staff/jason-gigley/index.html">Jason Gigley</a> </p>
+<p>I received my A.S in Natural Resources Biology at Northwest College, where I undergraduate research with <a href="https://nwc.edu/directory/combined/profile.html?id=b9d36ed8-608c-42da-a2a8-85138fba0ae9">Eric Atkinson</a> </p>
+
+<p>I received a B.S. in Molecular Biology and Microbiology and researched in lab of <a href="http://www.uwyo.edu/molecbio/faculty-and-staff/jason-gigley/index.html">Jason Gigley</a> </p>
 
 <p>I enjoy Tacos.</p>
 
