--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
 <p>I received a B.S. in Molecular Biology and Microbiology and researched in lab of <a href="http://www.uwyo.edu/molecbio/faculty-and-staff/jason-gigley/index.html">Jason Gigley</a> </p>
 
-<p>I enjoy Tacos.</p>
+<p>After college, I served in the Peace Corps as a Secondary Science teacher in Ghana from 2016-2018.</p>
 
-<p>Daniela is the cutest.</p>
+<p>Daniela who is proof-reading is the cutest.</p>
 
 </div>
 
