--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
       <ul class="navigation">
 	<li><a href="/" title="Home">Home</a></li>
 	<li><a href="/research/" title="Research">Research</a></li>
-	<li><a href="/software/" title="Software">Software</a></li>
-	<li><a href="/teaching/" title="Teaching">Teaching</a></li>
+	<li><a href="/service/" title="Service">Service</a></li>
 	<li><a href="/cv.pdf" title="CV">CV</a></li>
 	<li><a href="https://github.com/DavidRach"><img src="/github-mark-22px.png"></a></li>
       </ul>
