--- a/service/index.html
+++ b/service/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <div class=right>
-  <img src=PublicService.jpg>
+  <img src=/service/PublicService.jpg>
 </div>
 
 <div class=left>
