--- a/service/index.html
+++ b/service/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <div class=right>
-  <img src="/service/PublicService.jpg" width=10% height=10%>
+  <img src="/service/PublicService.jpg" height="24" width="48">
 </div>
 
 <div class=left>
