--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <div class=right>
-  <img src=ProfilePic.png>
+  <img src="ProfilePic.png" height="240" width="480">
 </div>
 
 <div class=left>
