--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <div class=right>
-  <img src="ProfilePic.png" height="240" width="480">
+  <img src="ProfilePic.png" height="50%" width="50%">
 </div>
 
 <div class=left>
