--- a/research/index.html
+++ b/research/index.html
@@ -33,9 +33,12 @@
 	<li><a href="https://github.com/DavidRach"><img src="/github-mark-22px.png"></a></li>
       </ul>
     </header>
+	  
+<h1 id="papers">HIV-exposed Uninfected (HEU) infants </h1>	  
+	  
 
 
-<h1 id="papers">Papers</h1>
+<h1 id="papers">Co-Author Publications</h1>
     
 <p> Age-related changes in PD-1 expression coincide with increased cytotoxic potential in Vδ2 T cells during infancy.<br />
 Hsu, Boudova, Mvula, Divala, Rach, Mungwira, Boldrin, Degiacomi, Manganelli, Laufer and Cairo. <br />
