--- a/service/index.html
+++ b/service/index.html
@@ -40,8 +40,10 @@
 <div class=left>
   <h1 id="DavidRach">David Rach</h1>
 
-<p> Ahem <a href="https://wjla.com/news/local/university-of-maryland-covid-trial-vaccine-recipient-success-indicators"> COVID trial vaccine recipient not licking doorknobs, but glad to see success indicators</a> </p>
-
+	<p> Best headline ever </p>
+	<a href="https://wjla.com/news/local/university-of-maryland-covid-trial-vaccine-recipient-success-indicators"> COVID trial vaccine recipient not licking doorknobs, but glad to see success indicators</a> </p>
+	
+	  
 </div>
 
 
