--- a/404.html
+++ b/404.html
@@ -10,18 +10,14 @@
     a:hover { text-decoration:underline; }
   </style>
   </head>
-  
+
   <body>
+    <div class="content">
+      <h2>404 not found</h2>
+      <p>Oops, I messed up and you found a dead link. </p>
+      Click to go back:<a href="/">home</a></p>
+    <img src="ItsFine">
     
-    <div class="text-center">
-      <h1><p>Whoops, I messed up and you ended up on a dead link.</p>
-         <p> Click  <a href="/">here</a></p> to go back.</h1>
-  <h1>Move along. (404 error)</h1>
-
-
-  <img src=""ItsFine.png"/>
-
-    
-                         </div>
-  </body>
+    </div>
+   </body> 
 </html>
