--- a/404.html
+++ b/404.html
@@ -14,9 +14,9 @@
   <body>
     <div class="content">
       <h2>404 not found</h2>
-      <p>Oops, I messed up and you found a dead link. </p>
-      Click to go back:<a href="/">home</a></p>
-    <img src="ItsFine">
+      <p>Oops, I messed up my website code and you found a dead link. </p>
+      Click <em><a href="/">here</a></em> to return to home</p>
+    <img src="ItsFine.png">
     
     </div>
    </body> 
