--- a/service/index.html
+++ b/service/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <div class=right>
-  <img src="/service/PublicService.jpg" height="240" width="480">
+  <img src="/service/PublicService.jpg" height="50%" width="50%">
 </div>
 
 <div class=left>
