--- a/404.html
+++ b/404.html
@@ -15,7 +15,10 @@
     <div class="content">
       <h2>404 not found</h2>
       <p>Oops, I messed up my website code and you found a dead link. </p>
-      Click <em><a href="/">here</a></em> to return to home</p>
+      Click <em><a href="/">here</a></em> to go back</p>
+    </div>
+  
+   <div class=left>
     <img src="ItsFine.png">
     
     </div>
