--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <p>After college, I served in the Peace Corps as a Secondary Science teacher in Ghana from 2016-2018.</p>
 
-<p>Daniela who is proof-reading is the cutest.</p>
+	<p> <h4> Daniela who is proof-reading is the cutest. </h4></p>
 
 </div>
 
