--- a/service/index.html
+++ b/service/index.html
@@ -38,9 +38,9 @@
 </div>
 
 <div class=left>
-  <h1 id="DavidRach">David Rach</h1>
+  <h1 id="DavidRach"></h1>
 
-	<p> Best headline ever </p>
+	<p>  </p>
 	<a href="https://wjla.com/news/local/university-of-maryland-covid-trial-vaccine-recipient-success-indicators"> COVID trial vaccine recipient not licking doorknobs, but glad to see success indicators</a> </p>
 	
 	  
