--- a/index.html
+++ b/index.html
@@ -40,11 +40,14 @@
 <div class=left>
   <h1 id="DavidRach">David Rach</h1>
 
-<p>I am a 5th year PhD Candidate in Molecular Microbiology and Immunology at the University of Maryland, School of Medicine. My thesis advisors are Drs. <a href="https://www.medschool.umaryland.edu/profiles/Cairo-Cristiana/">Cristiana Cairo</a> and <a href="https://www.medschool.umaryland.edu/profiles/Lyke-Kirsten/"> Kirsten Lyke</a></p>
+<p>I am a 5th year PhD Candidate in Molecular Microbiology and Immunology at the University of Maryland, School of Medicine. My thesis advisors are Drs. <a href="https://www.medschool.umaryland.edu/profiles/Cairo-Cristiana/">Cristiana Cairo</a> and <a href="https://www.medschool.umaryland.edu/profiles/Lyke-Kirsten/"> Kirsten Lyke.</a></p>
 
-<p><br/>I am a graduate of Northwest College where I received my A.S in Natural Resources Biology, and University of Wyoming where I received a B.S. in Molecular Biology and Microbiology. </br> It was doing undergraduate research in lab of <a href="http://www.uwyo.edu/molecbio/faculty-and-staff/jason-gigley/index.html">Jason Gigley</a> that I first became interested in Immunology. </p>
+<p> Before moving to Baltimore for graduate school, I served in the Peace Corps as a Secondary Science teacher in Ghana from 2016-2018.</p>
+	
+<p><br/>I am a graduate of Northwest College where I received my A.S in Natural Resources Biology, and University of Wyoming where I received a B.S. in Molecular Biology and Microbiology. </br> 
+It was doing undergraduate research in lab of <a href="http://www.uwyo.edu/molecbio/faculty-and-staff/jason-gigley/index.html">Jason Gigley</a> that I first became interested in Immunology. </p>
 
-<p>After college, I served in the Peace Corps as a Secondary Science teacher in Ghana from 2016-2018.</p>
+
 
 
 </div>
