--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <p>I am a 5th year PhD Candidate in Molecular Microbiology and Immunology at the University of Maryland, School of Medicine. My thesis advisors are Drs. <a href="https://www.medschool.umaryland.edu/profiles/Cairo-Cristiana/">Cristiana Cairo</a> and <a href="https://www.medschool.umaryland.edu/profiles/Lyke-Kirsten/"> Kirsten Lyke.</a></p>
 	
-<p><br/>I am a graduate of Northwest College where I received my A.S in Natural Resources Biology, and University of Wyoming where I received a B.S. in Molecular Biology and Microbiology. </br> </p>
+<p>I am a graduate of Northwest College where I received my A.S in Natural Resources Biology, and University of Wyoming where I received a B.S. in Molecular Biology and Microbiology. </p>
 
 <p> It was doing undergraduate research in lab of <a href="http://www.uwyo.edu/molecbio/faculty-and-staff/jason-gigley/index.html">Jason Gigley</a> that I first became interested in Immunology. </p>
 
