--- a/index.html
+++ b/index.html
@@ -11,17 +11,22 @@
     <link rel="stylesheet" media="all" href="/res/screen.css?v=20220110152742" type="text/css">
     <link rel="alternate" type="application/atom+xml" title="David Rach" href="/atom.xml">
     <link rel="shortcut icon" href="/tree-round.png?v=20220110152742">
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110259368-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-110259368-1');
-</script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-P86R35G');</script>
+<!-- End Google Tag Manager -->
+	  
   </head>
   <body>
+	  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P86R35G"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+	  
     <header class="main">
       <h1><a href="/"></a></h1>
       <ul class="navigation">
