--- a/404.html
+++ b/404.html
@@ -1,6 +1,17 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
+    
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B7X33YDF5P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B7X33YDF5P');
+</script>
+    
     <meta charset="utf-8">
     <title>Page not found</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
