--- a/index.html
+++ b/index.html
@@ -45,13 +45,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class=left>
   <h1 id="DavidRach">David Rach</h1>
 
-<p>I am a PhD Candidate in Molecular Microbiology and Immunology at the University of Maryland, School of Medicine. My thesis advisors are Drs. <a href="https://www.medschool.umaryland.edu/profiles/Cairo-Cristiana/">Cristiana Cairo</a> and <a href="https://www.medschool.umaryland.edu/profiles/Lyke-Kirsten/"> Kirsten Lyke.</a></p>
-	
-<p>I am a graduate of Northwest College where I received my A.S in Natural Resources Biology, and University of Wyoming where I received a B.S. in Molecular Biology and Microbiology. </p>
+<p><br>I am a Molecular Microbiology and Immunology PhD Candidate at the University of Maryland, School of Medicine in Baltimore, Maryland. My thesis advisors are Drs. <a href="https://www.medschool.umaryland.edu/profiles/Cairo-Cristiana/">Cristiana Cairo</a> and <a href="https://www.medschool.umaryland.edu/profiles/Lyke-Kirsten/"> Kirsten Lyke.</a>
+	</br><br> My thesis project focuses on understanding the impact that prenatal exposure to maternal HIV and/or antiretrovirals has on innate-like and adaptive T cells
+	  in HIV-exposed Uninfected (HEU) infants during early life.</br></p>
+
+<p> I am a graduate of <a href="https://nwc.edu/">Northwest College</a> where I received my A.S in Natural Resources Biology, and <a href="http://www.uwyo.edu/">University of Wyoming</a> where I received a B.S. in Molecular Biology and Microbiology. </p>
 
 <p> It was doing undergraduate research in lab of <a href="http://www.uwyo.edu/molecbio/faculty-and-staff/jason-gigley/index.html">Jason Gigley</a> that I first became interested in Immunology. </p>
 
-<p> Before moving to Baltimore for graduate school, I served in the Peace Corps as a Secondary Science teacher in Ghana from 2016-2018.</p>
+<p> Before moving to Baltimore for graduate school, I served in the Peace Corps as a Secondary Science Teacher in Ghana from 2016-2018. </p>
+
 
 
 </div>
