--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	  in HIV-exposed Uninfected (HEU) infants during early life.</br></p>
 
 <p> I am a graduate of <a href="https://nwc.edu/">Northwest College</a> where I received my A.S in Natural Resources Biology, and <a href="http://www.uwyo.edu/">University of Wyoming</a> where I received a B.S. in Molecular Biology and Microbiology. </p>
-
-<p> It was doing undergraduate research in lab of <a href="http://www.uwyo.edu/molecbio/faculty-and-staff/jason-gigley/index.html">Jason Gigley</a> that I first became interested in Immunology. </p>
+<p> It was thanks to opportunities to conduct undergraduate research as part of <a href="http://www.uwyo.edu/wyominginbre/">INBRE</a> that I first became interested in Microbiology at Northwest College, and NK cell responses to Toxoplasma gondii in the lab of <a href="http://www.uwyo.edu/molecbio/faculty-and-staff/jason-gigley/index.html">Jason Gigley</a> that I first became interested in Immunology. </p>
 
 <p> Before moving to Baltimore for graduate school, I served in the Peace Corps as a Secondary Science Teacher in Ghana from 2016-2018. </p>
 
