--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	</br><br> My thesis project focuses on understanding the impact that prenatal exposure to maternal HIV and/or antiretrovirals has on innate-like and adaptive T cells
 	  in HIV-exposed Uninfected (HEU) infants during early life.</br></p>
 
-<p> I am a graduate of <a href="https://nwc.edu/">Northwest College</a> where I received my A.S in Natural Resources Biology, and <a href="http://www.uwyo.edu/">University of Wyoming</a> where I received a B.S. in Molecular Biology and Microbiology. </p>
-<p> It was thanks to opportunities to conduct undergraduate research as part of <a href="http://www.uwyo.edu/wyominginbre/">INBRE</a> that I first became interested in Microbiology at Northwest College, and NK cell responses to Toxoplasma gondii in the lab of <a href="http://www.uwyo.edu/molecbio/faculty-and-staff/jason-gigley/index.html">Jason Gigley</a> that I first became interested in Immunology. </p>
+<p> I am a graduate of <a href="https://nwc.edu/">Northwest College</a>, where thanks to opportunities to carry out undergraduate research as part of the <a href="http://www.uwyo.edu/wyominginbre/">INBRE</a> program I first became interested in Microbiology. After receiving my A.S in Natural Resources Biology, I transerred to the <a href="http://www.uwyo.edu/">University of Wyoming</a> where I received a B.S. in Molecular Biology and Microbiology.
+where I researched NK cell responses to Toxoplasma gondii in the lab of <a href="http://www.uwyo.edu/molecbio/faculty-and-staff/jason-gigley/index.html">Jason Gigley</a> and first became interested in Immunology. </p>
 
 <p> Before moving to Baltimore for graduate school, I served in the Peace Corps as a Secondary Science Teacher in Ghana from 2016-2018. </p>
 
