--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <h1 id="DavidRach">David Rach</h1>
 
 <p><br>I am a Molecular Microbiology and Immunology PhD Candidate at the University of Maryland, School of Medicine in Baltimore, Maryland. My thesis advisors are Drs. <a href="https://www.medschool.umaryland.edu/profiles/Cairo-Cristiana/">Cristiana Cairo</a> and <a href="https://www.medschool.umaryland.edu/profiles/Lyke-Kirsten/"> Kirsten Lyke.</a>
-	</br><br> My thesis project focuses on understanding the impact that prenatal exposure to maternal HIV and/or antiretrovirals has on innate-like and adaptive T cells
+	</br><br> My thesis project focuses on understanding the impact that prenatal exposure to maternal HIV and/or antiretrovirals have on innate-like and adaptive T cells
 	  in HIV-exposed Uninfected (HEU) infants during early life.</br></p>
 
 <p> I am a graduate of <a href="https://nwc.edu/">Northwest College</a> receiving my A.S in Natural Resources Biology. It was here that thanks to opportunities to carry out undergraduate research as part of <a href="http://www.uwyo.edu/wyominginbre/">INBRE</a> that I first became interested in Microbiology.</p>
