--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <p> I am a graduate of <a href="https://nwc.edu/">Northwest College</a> receiving my A.S in Natural Resources Biology. It was here that thanks to opportunities to carry out undergraduate research as part of <a href="http://www.uwyo.edu/wyominginbre/">INBRE</a> that I first became interested in Microbiology.</p>
 
-<p>After Northwest, I transferred to the <a href="http://www.uwyo.edu/">University of Wyoming</a> where I received a B.S. in Molecular Biology and Microbiology, and did undergraduate research on NK cell responses to Toxoplasma gondii infection in the lab of <a href="http://www.uwyo.edu/molecbio/faculty-and-staff/jason-gigley/index.html">Jason Gigley</a>. </p>
+<p>After Northwest, I transferred to the <a href="http://www.uwyo.edu/">University of Wyoming</a> where I received a B.S. in Molecular Biology and Microbiology, while doing undergraduate research on NK cell responses to Toxoplasma gondii infection in the lab of <a href="http://www.uwyo.edu/molecbio/faculty-and-staff/jason-gigley/index.html">Jason Gigley</a>. </p>
 
 <p> Before moving to Baltimore for graduate school, I served in the Peace Corps as a Secondary Science Teacher in Ghana from 2016-2018. </p>
 
